--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -93,21 +93,23 @@
                     <Button 
                         id="btnProRegistrar"
                         text="Pre-registrar"
-                        icon="sap-icon://create-form"
+                        icon="sap-icon://play"
+                      
                         enabled="{mainView>/hasSelection}"
                         press="onPreRegistrar"/>
                     
                     <Button 
                         id="btnContabilizar"
                         text="Contabilizar"
-                        icon="sap-icon://sales-order"
+                        icon="sap-icon://complete"
                         enabled="{mainView>/hasSelection}"
+                        visible="{mainView>/mostrarContabilizar}"
                         press="onContabilizar"/>
                     
                     <Button 
                         id="btnVerDocSAP"
                         text="Ver documento SAP"
-                        icon="sap-icon://display"
+                        icon="sap-icon://inspect"
                         enabled="{mainView>/hasSelection}"
                         press="onVerDocumentoSAP"/>
                     
@@ -121,7 +123,8 @@
                     <Button 
                         id="btnFacturaObservada"
                         text="Factura observada"
-                        icon="sap-icon://message-warning"
+                        icon="sap-icon://flag"
+                      
                         enabled="{mainView>/hasSelection}"
                         press="onFacturaObservada"/>
                     
@@ -187,6 +190,7 @@
                     items="{path: 'facturas>/facturas'}"
                     fixedLayout="false"
                     width="auto"
+                    class="sapUiSizeCompact"
                 > 
                     
                     <columns>
@@ -202,68 +206,68 @@
                             <Text id="headerEstado" text="Estado"/>
                         </Column>
                         
-                        <Column id="colEscenario" width="4em">
+                        <Column id="colEscenario" width="5em">
                             <Text id="headerEscenario" text="Escenario"/>
                         </Column>
                         
-                        <Column id="colSociedad" width="7em">
+                        <Column id="colSociedad" width="5em">
                             <Text id="headerSociedad" text="Sociedad"/>
                         </Column>
                         
-                        <Column id="colCodigo" width="7em">
+                        <Column id="colCodigo" width="5em">
                             <Text id="headerCodigo" text="Código"/>
                         </Column>
                         
-                        <Column id="colRucProveedor" width="10em">
+                        <Column id="colRucProveedor" width="8em">
                             <Text id="headerRucProveedor" text="RUC proveedor"/>
                         </Column>
                         
-                        <Column id="colProveedor" width="10em">
+                        <Column id="colProveedor" width="8em">
                             <Text id="headerProveedor" text="Proveedor"/>
                         </Column>
                         
-                        <Column id="colNombre" width="auto">
+                        <Column id="colNombre" width="18em">
                             <Text id="headerNombre" text="Nombre"/>
                         </Column>
                         
-                        <Column id="colCondPago" width="auto">
+                        <Column id="colCondPago" width="6em">
                             <Text id="headerCondPago" text="Cond. pago"/>
                         </Column>
                         
-                        <Column id="colTipoDoc" width="7em">
-                            <Text id="headerTipoDoc" text="Tipo doc."/>
+                        <Column id="colTipoDoc" width="5.5em">
+                            <Text id="headerTipoDoc" text="Tipo"/>
                         </Column>
                         
-                        <Column id="colReferencia" width="20em">
+                        <Column id="colReferencia" width="13em">
                             <Text id="headerReferencia" text="Referencia"/>
                         </Column>
                         
-                        <Column id="colFechaEmision" width="10em">
-                            <Text id="headerFechaEmision" text="Fecha Emisi."/>
+                        <Column id="colFechaEmision" width="7.5em">
+                            <Text id="headerFechaEmision" text="Fecha Emisión"/>
                         </Column>
                         
-                        <Column id="colFechaRegistro" width="10em">
-                            <Text id="headerFechaRegistro" text="Fecha regist."/>
+                        <Column id="colFechaRegistro" width="7.5em">
+                            <Text id="headerFechaRegistro" text="Fecha Registro"/>
                         </Column>
                         
-                        <Column id="colFechaVencimiento" width="10em">
-                            <Text id="headerFechaVencim" text="Fecha vencimin."/>
+                        <Column id="colFechaVencimiento" width="7.5em">
+                            <Text id="headerFechaVencim" text="Fecha Vencimiento"/>
                         </Column>
                         
-                        <Column id="colFechaBase" width="10em">
+                        <Column id="colFechaBase" width="7.5em">
                             <Text id="headerFechaBase" text="Fecha Base"/>
                         </Column>
                         
-                        <Column id="colFechaContable" width="10em">
+                        <Column id="colFechaContable" width="7.5em">
                             <Text id="headerFechaContable" text="Fecha Contable"/>
                         </Column>
                         
-                        <Column id="colNumDocLogistico" width="12em">
-                            <Text id="headerNumDocLog" text="N° Doc. logístico"/>
+                        <Column id="colNumDocLogistico" width="9em">
+                            <Text id="headerNumDocLog" text="N° Doc. logístico."/>
                         </Column>
                         
-                        <Column id="colEjercicio" width="7em">
-                            <Text id="headerEjercicio" text="Ejercicio"/>
+                        <Column id="colEjercicio" width="5.5em">
+                            <Text id="headerEjercicio" text="Ejerc."/>
                         </Column>
                     </columns>
                     
@@ -277,7 +281,7 @@
                                     select="onCheckboxSelect"/>
                                 
                                 <!-- Estado: Check verde o círculo amarillo -->
-                                <HBox id="cellEstado" justifyContent="Center">
+                                <HBox id="cellEstado" justifyContent="Center" alignItems="Center">
                                     <core:Icon 
                                         id="iconEstado"
                                         src="{= ${facturas>estado} === 'Aprobada' ? 'sap-icon://accept' : 
@@ -286,25 +290,25 @@
                                         color="{= ${facturas>estado} === 'Aprobada' ? '#2b7d2b' : 
                                                ${facturas>estado} === 'Pendiente' ? '#0070f0' : 
                                                ${facturas>estado} === 'Observada' ? '#e9730c' : '#6a6d70' }"
-                                        size="1.2rem"/>
+                                        size="0.875rem"/>
                                 </HBox>
                                 
-                                <Text id="cellEscenario" text="{facturas>escenario}"/>
-                                <Text id="cellSociedad" text="{facturas>sociedad}"/>
-                                <Text id="cellCodigo" text="{facturas>codigo}"/>
-                                <Text id="cellRucProveedor" text="{facturas>rucProveedor}"/>
-                                <Text id="cellProveedor" text="{facturas>proveedor}"/>
-                                <Text id="cellNombre" text="{facturas>nombre}"/>
-                                <Text id="cellCondPago" text="{facturas>condPago}"/>
-                                <Text id="cellTipoDoc" text="{facturas>tipoDoc}"/>
-                                <Text id="cellReferencia" text="{facturas>referencia}"/>
-                                <Text id="cellFechaEmision" text="{facturas>fechaEmision}"/>
-                                <Text id="cellFechaRegistro" text="{facturas>fechaRegistro}"/>
-                                <Text id="cellFechaVencimiento" text="{facturas>fechaVencimiento}"/>
-                                <Text id="cellFechaBase" text="{facturas>fechaBase}"/>
-                                <Text id="cellFechaContable" text="{facturas>fechaContable}"/>
-                                <Text id="cellNumDocLogistico" text="{facturas>numeroDocLogistico}"/>
-                                <Text id="cellEjercicio" text="{facturas>ejercicio}"/>
+                                <Text id="cellEscenario" width="6em" text="{facturas>escenario}"/>
+                                <Text id="cellSociedad" width="5.5em" text="{facturas>sociedad}"/>
+                                <Text id="cellCodigo" width="5.5em" text="{facturas>codigo}"/>
+                                <Text id="cellRucProveedor" width="8.5em" text="{facturas>rucProveedor}"/>
+                                <Text id="cellProveedor" width="9em" text="{facturas>proveedor}"/>
+                                <Text id="cellNombre" width="20em" text="{facturas>nombre}"/>
+                                <Text id="cellCondPago" width="7em" text="{facturas>condPago}"/>
+                                <Text id="cellTipoDoc" width="6em" text="{facturas>tipoDoc}"/>
+                                <Text id="cellReferencia" width="10rem" text="{facturas>referencia}"/>
+                                <Text id="cellFechaEmision" width="8.5em" text="{facturas>fechaEmision}"/>
+                                <Text id="cellFechaRegistro" width="8.5em" text="{facturas>fechaRegistro}"/>
+                                <Text id="cellFechaVencimiento" width="8.5em" text="{facturas>fechaVencimiento}"/>
+                                <Text id="cellFechaBase" width="8.5em" text="{facturas>fechaBase}"/>
+                                <Text id="cellFechaContable" width="8.5em" text="{facturas>fechaContable}"/>
+                                <Text id="cellNumDocLogistico" width="10em" text="{facturas>numeroDocLogistico}"/>
+                                <Text id="cellEjercicio" width="6em" text="{facturas>ejercicio}"/>
                             </cells>
                         </ColumnListItem>
                     </items>
