feat: refactorizacion integracion la vista Filtros en MainView y actualizar rutas en manifest.json

--- a/webapp/view/Detalle.view.xml
+++ b/webapp/view/Detalle.view.xml
@@ -6,34 +6,33 @@
     xmlns:smartTable="sap.ui.comp.smarttable"
     xmlns:plugins="sap.m.plugins"
     displayBlock="true"
-    height="100%">
-    
+    height="100%"
+>
     <Page
         id="detallePage"
         title="Detalle de Factura"
         showNavButton="true"
         navButtonPress="onNavBack"
-        class="sapUiResponsiveContentPadding">
-        
+        class="sapUiResponsiveContentPadding"
+    >
         <headerContent>
             <Button
                 id="btnExportarDetalle"
                 text="Exportar"
                 icon="sap-icon://excel-attachment"
-                press="onExportarDetalle"/>
+                press="onExportarDetalle"
+            />
         </headerContent>
-        
-        <!-- Contenedor para scroll horizontal -->
-        <ScrollContainer 
+
+        <ScrollContainer
             id="detalleScrollContainer"
             height="100%"
             width="100%"
             vertical="true"
             horizontal="true"
-            focusable="true">
-            
-            <!-- Smart Table para detalles -->
-            <smartTable:SmartTable 
+            focusable="true"
+        >
+            <smartTable:SmartTable
                 id="smartTableDetalle"
                 entitySet="DetalleFactura"
                 enableExport="true"
@@ -44,60 +43,73 @@
                 showRowCount="true"
                 persistencyKey="DetalleFacturaTable"
                 enableAutoBinding="false"
-                enableAutoColumnWidth="false">
-                
+                enableAutoColumnWidth="false"
+            >
                 <smartTable:layoutData>
-                    <FlexItemData growFactor="1" baseSize="0%"/>
+                    <FlexItemData
+                        growFactor="1"
+                        baseSize="0%"
+                    />
                 </smartTable:layoutData>
-                
-                <!-- Tabla interna -->
-                <Table 
+
+                <Table
                     id="tablaDetalle"
                     mode="None"
                     items="{path: 'detalle>/items'}"
                     fixedLayout="false"
-                    width="auto" >
-                    
+                    width="auto"
+                >
                     <columns>
                         <Column width="8em">
-                            <Text text="Pos. Factura"/>
+                            <Text text="Pos. Factura" />
                         </Column>
                         <Column width="20em">
-                            <Text text="Descripción"/>
+                            <Text text="Descripción" />
                         </Column>
-                        <Column width="8em" hAlign="End">
-                            <Text text="Cantidad"/>
+                        <Column
+                            width="8em"
+                            hAlign="End"
+                        >
+                            <Text text="Cantidad" />
                         </Column>
                         <Column width="8em">
-                            <Text text="UMB"/>
+                            <Text text="UMB" />
                         </Column>
-                        <Column width="10em" hAlign="End">
-                            <Text text="PU sin IGV"/>
+                        <Column
+                            width="10em"
+                            hAlign="End"
+                        >
+                            <Text text="PU sin IGV" />
                         </Column>
-                        <Column width="10em" hAlign="End">
-                            <Text text="PU con IGV"/>
+                        <Column
+                            width="10em"
+                            hAlign="End"
+                        >
+                            <Text text="PU con IGV" />
                         </Column>
-                        <Column width="12em" hAlign="End">
-                            <Text text="Total con IGV"/>
+                        <Column
+                            width="12em"
+                            hAlign="End"
+                        >
+                            <Text text="Total con IGV" />
                         </Column>
                     </columns>
-                    
+
                     <items>
                         <ColumnListItem>
                             <cells>
-                                <Text text="{detalle>posFactura}"/>
-                                <Text text="{detalle>descripcion}"/>
-                                <Text text="{detalle>cantidad}"/>
-                                <Text text="{detalle>umb}"/>
-                                <Text text="{detalle>puSinIGV}"/>
-                                <Text text="{detalle>puConIGV}"/>
-                                <Text text="{detalle>totalConIGV}"/>
+                                <Text text="{detalle>posFactura}" />
+                                <Text text="{detalle>descripcion}" />
+                                <Text text="{detalle>cantidad}" />
+                                <Text text="{detalle>umb}" />
+                                <Text text="{detalle>puSinIGV}" />
+                                <Text text="{detalle>puConIGV}" />
+                                <Text text="{detalle>totalConIGV}" />
                             </cells>
                         </ColumnListItem>
                     </items>
                 </Table>
             </smartTable:SmartTable>
         </ScrollContainer>
-         
     </Page>
 </mvc:View>
