--- a/webapp/view/DocsAsignados.view.xml
+++ b/webapp/view/DocsAsignados.view.xml
@@ -6,34 +6,33 @@
     xmlns:smartTable="sap.ui.comp.smarttable"
     xmlns:plugins="sap.m.plugins"
     displayBlock="true"
-    height="100%">
-    
+    height="100%"
+>
     <Page
         id="docsAsignadosPage"
         title="Documentos Asignados"
         showNavButton="true"
         navButtonPress="onNavBack"
-        class="sapUiResponsiveContentPadding">
-        
+        class="sapUiResponsiveContentPadding"
+    >
         <headerContent>
             <Button
                 id="btnExportarDocs"
                 text="Exportar"
                 icon="sap-icon://excel-attachment"
-                press="onExportarDocs"/>
+                press="onExportarDocs"
+            />
         </headerContent>
-        
-        <!-- Contenedor para scroll horizontal -->
-        <ScrollContainer 
+
+        <ScrollContainer
             id="docsScrollContainer"
             height="100%"
             width="100%"
             vertical="true"
             horizontal="true"
-            focusable="true">
-            
-            <!-- Smart Table para documentos asignados -->
-            <smartTable:SmartTable 
+            focusable="true"
+        >
+            <smartTable:SmartTable
                 id="smartTableDocs"
                 entitySet="DocsAsignados"
                 enableExport="true"
@@ -44,80 +43,87 @@
                 showRowCount="true"
                 persistencyKey="DocsAsignadosTable"
                 enableAutoBinding="false"
-                enableAutoColumnWidth="false">
-                
+                enableAutoColumnWidth="false"
+            >
                 <smartTable:layoutData>
-                    <FlexItemData growFactor="1" baseSize="0%"/>
+                    <FlexItemData
+                        growFactor="1"
+                        baseSize="0%"
+                    />
                 </smartTable:layoutData>
-                
+
                 <!-- Tabla interna -->
-                <Table 
+                <Table
                     id="tablaDocs"
                     mode="None"
                     items="{path: 'docs>/documentos'}"
                     fixedLayout="false"
-                    width="auto" >
-                    
+                    width="auto"
+                >
                     <columns>
                         <Column width="8em">
-                            <Text text="Pedido"/>
+                            <Text text="Pedido" />
                         </Column>
                         <Column width="8em">
-                            <Text text="Pos Pedido"/>
+                            <Text text="Pos Pedido" />
                         </Column>
                         <Column width="10em">
-                            <Text text="Fecha Ingreso"/>
+                            <Text text="Fecha Ingreso" />
                         </Column>
                         <Column width="12em">
-                            <Text text="Guía Remisión"/>
+                            <Text text="Guía Remisión" />
                         </Column>
                         <Column width="12em">
-                            <Text text="Doc Material Posic."/>
+                            <Text text="Doc Material Posic." />
                         </Column>
                         <Column width="20em">
-                            <Text text="Descripción"/>
+                            <Text text="Descripción" />
                         </Column>
-                        <Column width="12em" hAlign="End">
-                            <Text text="Cantidad Imp sin IGV"/>
+                        <Column
+                            width="12em"
+                            hAlign="End"
+                        >
+                            <Text text="Cantidad Imp sin IGV" />
                         </Column>
                         <Column width="8em">
-                            <Text text="Moneda"/>
+                            <Text text="Moneda" />
                         </Column>
                     </columns>
-                    
+
                     <items>
                         <ColumnListItem>
                             <cells>
-                                <Text text="{docs>pedido}"/>
-                                <Text text="{docs>posPedido}"/>
-                                <Text text="{docs>fechaIngreso}"/>
-                                <Text text="{docs>guiaRemision}"/>
-                                <Text text="{docs>docMaterialPosic}"/>
-                                <Text text="{docs>descripcion}"/>
-                                <Text text="{docs>cantidadSinIGV}"/>
-                                <Text text="{docs>moneda}"/>
+                                <Text text="{docs>pedido}" />
+                                <Text text="{docs>posPedido}" />
+                                <Text text="{docs>fechaIngreso}" />
+                                <Text text="{docs>guiaRemision}" />
+                                <Text text="{docs>docMaterialPosic}" />
+                                <Text text="{docs>descripcion}" />
+                                <Text text="{docs>cantidadSinIGV}" />
+                                <Text text="{docs>moneda}" />
                             </cells>
                         </ColumnListItem>
                     </items>
                 </Table>
             </smartTable:SmartTable>
         </ScrollContainer>
-        
-        <!-- Mensaje cuando no hay documentos -->
-        <VBox 
+
+        <VBox
             id="noDocsVBox"
             visible="{= ${docs>/totalDocumentos} === 0 }"
             alignItems="Center"
-            class="sapUiMediumMarginTop">
-            <core:Icon 
+            class="sapUiMediumMarginTop"
+        >
+            <core:Icon
                 src="sap-icon://document"
                 size="4rem"
                 color="#999"
-                class="sapUiSmallMarginBottom"/>
-            <Text 
+                class="sapUiSmallMarginBottom"
+            />
+            <Text
                 text="No se encontraron documentos asignados"
-                class="sapUiSmallMarginBottom"/>
+                class="sapUiSmallMarginBottom"
+            />
         </VBox>
-        
     </Page>
 </mvc:View>
